--- a/style.css
+++ b/style.css
@@ -15,6 +15,22 @@
     font-weight: 700;
  }
 
+ /* shared common style */
+
+ .section-title{
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+ }
+
+ .section-description{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+ }
+
 
 /* header section style */
 
@@ -47,3 +63,104 @@
 .header .header-img{
     width: 635px;
 }
+
+/* main > section-1 */
+
+.section-1{
+    padding:130px;
+    position: relative;
+    
+    
+}
+
+.section-1 .section-title{
+    margin-bottom: 30px;
+}
+
+.section-1-img{
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    margin:0 220px;
+}
+
+.img-1{
+    width:460px;
+    height:500px;
+    background: rgba(167,33,98,0.15);
+    border-radius:300px 300px 0 0;
+    
+}
+
+.img-2{
+    width:460px;
+    height:500px;
+    background: rgba(5, 151, 160, 0.15);
+    border-radius:300px 300px 0 0;
+    
+}
+
+.img-3{
+    width:460px;
+    height:500px;
+    background: rgba(71, 125, 17, 0.15);
+    border-radius:300px 300px 0 0;
+    
+    
+}
+
+.img-src{
+    width:50%;
+
+}
+
+/* main> section-2*/
+
+.section-2{
+    border-radius: 8px;
+    background: rgba(229, 84, 115,0.05);
+    border-radius: 8px;
+    margin-top:200px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    
+}
+
+.section-2-container{
+    width:1920px;
+    margin-left:200px;
+    margin-top:60px;
+    align-items: center;
+    text-align: left;
+}
+
+.section-2-title{
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+ }
+
+ .section-2-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom:32px;
+    
+ }
+
+ .section-2-img{
+    margin: 100px 300px 100px 0px;
+ }
+
+ .section-2 .btn-primary{
+     margin-left: 180px;
+}
+
+/* main > section-3 */
+
+
+
+
+
