--- a/style.css
+++ b/style.css
@@ -66,51 +66,73 @@
 
 /* main > section-1 */
 
-.section-1{
-    padding:130px;
-
-}
-
-.section-1 .section-title{
-    margin-bottom: 30px;
-}
-
-.section-1-img{
-    display:flex;
+.sec-1-con-1{
+    display: flex;
     align-items: center;
     justify-content: space-around;
-    margin:0 220px;
 }
 
 .img-1{
-    width:460px;
-    height:500px;
-    background: rgba(167,33,98,0.15);
-    border-radius:300px 300px 0 0;
-    
+    width:394px;
+    height: 468px;
+    margin: 10px;
+    margin-left:30px;
+    background-color: rgba(167,33,98,0.15);
+    border-radius: 300px 300px 0px 0px;  
 }
 
 .img-2{
-    width:460px;
-    height:500px;
-    background: rgba(5, 151, 160, 0.15);
-    border-radius:300px 300px 0 0;
-    
+    width:394px;
+    height: 468px;
+    margin: 10px;
+    background-color:  rgba(5, 151, 160, 0.15);
+    border-radius: 300px 300px 0px 0px;
 }
 
 .img-3{
-    width:460px;
-    height:500px;
-    background: rgba(71, 125, 17, 0.15);
-    border-radius:300px 300px 0 0;
-    
-    
+    width:394px;
+    height: 468px;
+    margin: 10px;
+    background-color: rgba(71, 125, 17, 0.15);
+    border-radius: 300px 300px 0px 0px;
 }
 
-.img-src{
-    width:50%;
-
+.img-group-1{
+    padding:88px 0px 50px 40px;
+    width:70%
 }
+
+.img-group-2{
+    padding:70px 10px 50px 30px;
+}
+
+.img-group-3{
+    padding:55px 10px 50px 60px;
+    width:70%
+}
+
+.h3-p{
+    margin-top: 150px;
+}
+
+.h3-p h3{
+    margin-bottom:24px;
+}
+
+.h3-p p{
+    margin-bottom: 50px;
+}
+
+.sec-1-img-title{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+}
+
+.sec-1-title-con .img-p{
+    text-decoration: underline;
+}
+
 
 /* main> section-2*/
 
@@ -197,11 +219,27 @@
     padding-top: 120px;
 }
 
-.section-4-container input {
-    
+.section-4-container .section-4-input{
+    align-items: center;
+    text-align: center;
 }
 
+.section-4-input .section-4-email{
+    width:450px;
+    height:35px;
+    margin:30px 0px 0px 0px;
+    border:0;
+}
 
+.section-4-input .btn-primary-1{
+    padding:8.5px 20px;
+    border-radius: 8px;
+    background-color: #E55473;
+    border:0;
+    color:white;
+    font-size: 20px;
+    font-weight: 700;
+}
 
 
 
